Overflow issue
Sometimes, we can have some elements (like datepickers) that need more
places to display the popup. And the carousel use "overflow:hidden".

So, I deactivate this property BUT reactivate it only on animation
process.

--- a/Bootstrap/bootstrap-wizard/bootstrap-wizard.css
+++ b/Bootstrap/bootstrap-wizard/bootstrap-wizard.css
@@ -4,6 +4,14 @@
 	background-color: white;
 }
 
+.wizard .carousel-inner {
+	overflow: visible;	
+}
+
+.wizard.animated .carousel-inner {
+	overflow: hidden;	
+}
+
 .wizard-header a {
     padding: 10px 12px 10px;
     margin-right: 5px;
